# GrainflowLib

./: .gitmodules  CMakeLists.txt  Liscense.txt  README.md
examples/Max External/: MspGrain.h
include/: IGrain.h  gfEnvelopes.h  gfFilters.h  gfGenericBufferReader.h  gfGrain.h  gfGrainCollection.h  gfIBufferReader.h  gfIoConfig.h  gfPanner.h  gfParam.h  gfRecord.h  gfSpat.h  gfSpatPanner.h  gfSyn.h  gfUtils.h  grainCollection.h
